--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-et3XIo5uWIRqa0jX
-skray1998t
+
 MONGO_URI = mongodb+srv://skray1998t:e83abHGZhNMrNQbW@cluster0.wd0bqtc.mongodb.net/thesisDB?retryWrites=true&w=majority&appName=Cluster0
+PORT = 5000
